[tool.poetry]
name = "python-fun"
version = "0.1.0"
description = ""
authors = ["RaniaAbdullahh <raniaabdullah6600@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
jupyterlab = "^3.2.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
